# glhack

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  depedencies.txt  scratchpad.txt  script_sketch.txt  todo.txt  update_tags.rb
data/: config.mp
data/scripts/: colors.mp  foo.txt  hello.mp  out.txt  out_test.mp  pathecho.mp  print_args.mp
doc/platform_notes/: How to build x264 libx264.dll in Windows.htm
glhack/: CmakeLists.txt  allocators.cpp  allocators.h  annotated_result.h  asset_manager.cpp  asset_manager.h  conversion.c  conversion.h  directory_browser.h  geometry.cpp  geometry.h  glbase.cpp  glbase.h  glbuffers.cpp  glbuffers.h  glh_app_services.cpp  glh_app_services.h  glh_default_assets.cpp  glh_default_assets.h  glh_dynamic_graph.cpp  glh_dynamic_graph.h  glh_font.cpp  glh_font.h  glh_generators.cpp  glh_generators.h  glh_image.cpp  glh_image.h  glh_index.cpp  glh_index.h  glh_layout_tools.cpp  glh_layout_tools.h  glh_mesh.cpp  glh_mesh.h  glh_names.cpp  glh_names.h  glh_scene_assets.cpp  glh_scene_assets.h  glh_scene_extensions.cpp  glh_scene_extensions.h  glh_scene_textdisplay.cpp  (+35 more)
glhack_unittests/: CmakeLists.txt  glhack_tests.cpp  masp_tests.cpp  pcontainers_tests.cpp  unittester.cpp  unittester.h
lib_ext_source/: build_x264_win.txt
masp_repl/: CmakeLists.txt  masp_repl.cpp
programs/buffers/: buffers.cpp
programs/composition_and_fonts/: compofonts.cpp
programs/hiddenlines/: hiddenlines.cpp
programs/test_prog_text_layouts/: test_prog_text_layouts.cpp
programs/triangle/: triangle.cpp
programs/vec_edit_a/: testdata.cpp  testdata.h  vec_edit_a.cpp
vc/: buffers.vcxproj  buffers.vcxproj.filters  compofonts.vcxproj  compofonts.vcxproj.filters  foo.mp  glh_user.props  glhack-unittest.vcxproj  glhack-unittest.vcxproj.filters  glhack.sln  glhack.vcxproj  glhack.vcxproj.filters  hiddenlines.vcxproj  hiddenlines.vcxproj.filters  library_dirs.props  masp-unittest.vcxproj  masp-unittest.vcxproj.filters  masp_repl.vcxproj  masp_repl.vcxproj.filters  pcontainers-unittest.vcxproj  pcontainers-unittest.vcxproj.filters  postbuild.bat  test_prog_glyph_pane.filters  test_prog_glyph_pane.vcxproj  triangle.vcxproj  triangle.vcxproj.filters  vec_edit_a.vcxproj
